# devin

fastapi_app/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
fastapi_app/app/: main.py
fastapi_app/tests/: test_endpoints.py
