[tool.poetry]
name = "fastapi_app"
version = "0.1.0"
description = ""
authors = ["Devin AI <devin@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
langchain = "^0.1.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
